# measurement-plugin-service-extension-example

./: .gitignore  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tech_debt.md  user_story.md
Custom_Services/: README.md  logger_service.py  pyproject.toml
Custom_Services/custom_logger/: LogMeasurement.serviceconfig
Custom_Services/docs/: README.md
Custom_Services/labview_measurement/NI-DCPower Source DC Voltage/: NIDCPowerSourceDCVoltage.lvproj
Custom_Services/labview_measurement/NI-DCPower Source DC Voltage/NI-DCPower Measurement/: Measurement Logic.vi
Custom_Services/labview_measurement/NI-DCPower Source DC Voltage/NIDCPowerSourceDCVoltage_client/: NIDCPowerSourceDCVoltage_client.lvlib  gRPC Client Test.vi
Custom_Services/python_measurement/nidcpower_source_dc_voltage/: measurement.py
Custom_Services/python_measurement/nidcpower_source_dc_voltage/stubs/: log_measurement_pb2.pyi
Custom_Services/stubs/: log_measurement_pb2_grpc.py
Custom_Services_BDC/: logger_service.py
docs/: README.md
examples/labview_measurement/: NIDCPowerSourceDCVoltage.instudioproj  NIDCPowerSourceDCVoltage.lvproj  NIDCPowerSourceDCVoltage.sfp  NIDCPowerSourceDCVoltage_example.seq  README.md
examples/labview_measurement/Json Logger Client/: Json Logger Client.lvclass
examples/labview_measurement/Json Logger Client/Methods/: Destroy Client.vi  Initialize Log.vi  Log Measurement.vi
examples/labview_measurement/Json Logger Client/stubs/: gRPC Client Test.vi
examples/labview_measurement/NI-DCPower Measurement/: Get Measurement Details.vi  Get Type Specializations.vi  Measurement Configuration.ctl  Measurement Logic.vi  Measurement Results.ctl  Measurement UI.vi  Run Service.vi
examples/python_measurement/: NIDCPowerSourceDCVoltage.instudioproj  NIDCPowerSourceDCVoltage.measui  NIDCPowerSourceDCVoltage.pinmap  NIDCPowerSourceDCVoltage.serviceconfig  NIDCPowerSourceDCVoltage.sfp  NIDCPowerSourceDCVoltage_example.seq  README.md  measurement.py  pyproject.toml
examples/python_measurement/stubs/: __init__.py  log_measurement_pb2.py  log_measurement_pb2_grpc.py
measurements/labview_measurement/: NIDCPowerSourceDCVoltage.lvproj  NIDCPowerSourceDCVoltage.sfp  NIDCPowerSourceDCVoltage_example.seq  README.md
measurements/labview_measurement/Json Logger/: Json Logger.lvclass
measurements/labview_measurement/Json Logger Client/: gRPC Client Test.vi
measurements/labview_measurement/NI-DCPower Measurement/: Get Measurement Details.vi  Get Type Specializations.vi  Get UI Details.vi  Measurement Logic.vi  Measurement UI.vi  NIDCPowerSourceDCVoltage.lvlib  Run Service.vi
measurements/labview_measurement/log_measurement_client/: gRPC Client Test.vi  log_measurement_client.lvlib
measurements/labview_measurement/logmeasurement_client/: gRPC Client Test.vi
measurements/python_measurement/: NIDCPowerSourceDCVoltage.instudioproj  NIDCPowerSourceDCVoltage.measproj  NIDCPowerSourceDCVoltage.measui  NIDCPowerSourceDCVoltage_example.seq  README.md  logger_service_client.py  measurement.py  pyproject.toml
measurements/python_measurement/stubs/: __init__.py  log_measurement_pb2.py  log_measurement_pb2_grpc.py  log_measurement_pb2_grpc.pyi
src/: pyproject.toml
src/bdc_logger/: LogMeasurement.serviceconfig  __init__.py  bdc_logger.proto  bdcdatalogger-22.8.0-py3-none-any.whl  log_measurement.proto  logger_service.py  pyproject.toml  start.bat
src/bdc_logger/stubs/: __init__.py  bdc_logger_pb2.py  bdc_logger_pb2_grpc.py  bdc_logger_pb2_grpc.pyi  log_measurement_pb2.py  log_measurement_pb2_grpc.pyi
src/csv_logger/: LogMeasurement.serviceconfig  log_measurement.proto  logger_service.py  pyproject.toml  start.bat
src/csv_logger/stubs/: __init__.py  log_measurement_pb2.py  log_measurement_pb2.pyi  log_measurement_pb2_grpc.pyi
src/json_logger/: LogMeasurement.serviceconfig  __init__.py  log_measurement.proto  logger_service.py  pyproject.toml  start.bat
src/json_logger/stubs/: __init__.py  log_measurement_pb2.pyi  log_measurement_pb2_grpc.py  log_measurement_pb2_grpc.pyi
(+80 files in other folders)
